Sync local changes

--- a/vibecheck-web/index.html
+++ b/vibecheck-web/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+    <title>VibeCheck - Mood Tracker</title>
+    <meta name="description" content="Tap in with the vibes and see how the world is feeling." />
+    <meta property="og:title" content="VibeCheck - Mood Tracker" />
+    <meta property="og:description" content="Tap in with the vibes and see how the world is feeling." />
+    <meta property="og:url" content="https://vibecheck.arcade.earth" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://vibecheck.arcade.earth/preview.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="VibeCheck - Mood Tracker" />
+    <meta name="twitter:description" content="Tap in with the vibes and see how the world is feeling." />
+    <meta name="twitter:image" content="https://vibecheck.arcade.earth/preview.png" />
   </head>
   <body>
     <div id="app"></div>
